Use fern-labour-core package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ authors = [
     { name = "Kieran Gray", email = "gray.kieran@protonmail.com" }
 ]
 requires-python = ">=3.12"
+dependencies = [
+    "fern-labour-core>=0.1.0",
+]
 
 [dependency-groups]
 test = [
@@ -21,6 +24,9 @@ dev = [
     "mypy<2.0.0,>=1.11.2",
     "ruff<1.0.0,>=0.6.3",
 ]
+[tool.uv.sources]
+fern-labour-core = { index = "fern-labour-packages" }
+
 [[tool.uv.index]]
 name = "fern-labour-packages"
 url = "https://europe-west2-python.pkg.dev/valued-vault-446719-t7/fern-labour-packages/simple/"
